fix: pageHeader alignment

--- a/portfolio/src/app/components/molecules/pageHeader/pageHeader.module.css
+++ b/portfolio/src/app/components/molecules/pageHeader/pageHeader.module.css
@@ -17,16 +17,19 @@
 .left {
     align-items: start;
     text-align: start;
+    margin-right: auto;
 }
 
 .center {
     align-items: center;
     text-align: center;
+    margin: auto;
 }
 
 .right {
     align-items: end;
     text-align: end;
+    margin-left: auto;
 }
 
 .separator {
